--- a/force-app/main/classes/FFConfig.cls
+++ b/force-app/main/classes/FFConfig.cls
@@ -1,19 +1,5 @@
 public class FFConfig {
 
-    private static final String BASE_URL = 'https://config.ff.harness.io/api/1.0';
-    private static final String EVENTS_URL = 'https://event.ff.harness.io/api/1.0';
-    private static final Boolean METRICS_ENABLED = false;
-
-    private String baseUrl = BASE_URL;
-    private String eventsUrl = EVENTS_URL;
-    private Boolean metricsEnabled = METRICS_ENABLED;
-
-    private FFCache cache;
-
-    private Integer evalExpireAfter = 60000;
-    private Integer featureConfigTimeToLive = 3600;
-    private Integer authExpireAfter = 60000 * 60 * 24;
-
     public FFConfig(
         String baseUrl,
         String eventsUrl,
@@ -21,6 +7,7 @@ public class FFConfig {
         Integer evalExpireAfter,
         Integer authExpireAfter,
         Integer featureConfigTimeToLive,
+        Integer authRetries,
         FFCache cache
     ) {
         this.baseUrl = baseUrl;
@@ -30,35 +17,17 @@ public class FFConfig {
         this.authExpireAfter = authExpireAfter;
         this.featureConfigTimeToLive = featureConfigTimeToLive;
         this.cache = cache;
+        this.authRetries = authRetries;
     }
 
-    public String getBaseUrl() {
-        return this.baseUrl;
-    }
-
-    public String getEventsUrl() {
-        return this.eventsUrl;
-    }
-
-    public Boolean getMetricsEnabled() {
-        return this.metricsEnabled;
-    }
-
-    public Integer getEvalExpireAfter() {
-        return this.evalExpireAfter;
-    }
-
-    public Integer getAuthExpireAfter() {
-        return this.authExpireAfter;
-    }
-
-    public Integer getFeatureConfigTimeToLive() {
-        return this.featureConfigTimeToLive;
-    }
-
-    public FFCache getCache() {
-        return this.cache;
-    }
+    public Integer authRetries { get; private set; }
+    public String baseUrl { get; private set; }
+    public String eventsUrl { get; private set; }
+    public Boolean metricsEnabled { get; private set; }
+    public Integer evalExpireAfter { get; private set; }
+    public Integer authExpireAfter { get; private set; }
+    public Integer featureConfigTimeToLive { get; private set; }
+    public FFCache cache { get; private set; }
 
     public static Builder builder() {
         return new Builder();
@@ -66,13 +35,14 @@ public class FFConfig {
 
     public class Builder {
 
-        private String baseUrl = FFConfig.BASE_URL;
-        private String eventsUrl = FFConfig.EVENTS_URL;
-        private Boolean metricsEnabled = METRICS_ENABLED;
+        private String baseUrl = 'https://config.ff.harness.io/api/1.0';
+        private String eventsUrl = 'https://events.ff.harness.io/api/1.0';
+        private Boolean metricsEnabled = false;
 
         private Integer evalExpireAfter = 300;
         private Integer featureConfigTimeToLive = 3600;
         private Integer authExpireAfter = 60 * 60 * 24;
+        private Integer authRetries = 10;
 
         private FFCache cache;
 
@@ -81,13 +51,18 @@ public class FFConfig {
             return this;
         }
 
+        public Builder authRetries(Integer authRetries) {
+            this.authRetries = authRetries;
+            return this;
+        }
+
         public Builder eventsUrl(String url) {
             this.eventsUrl = url;
             return this;
         }
 
-        public Builder metricsEnabled(Boolean value) {
-            this.metricsEnabled = value;
+        public Builder metricsEnabled() {
+            this.metricsEnabled = true;
             return this;
         }
 
@@ -119,6 +94,7 @@ public class FFConfig {
                 this.evalExpireAfter,
                 this.authExpireAfter,
                 this.featureConfigTimeToLive,
+                this.authRetries,
                 this.cache
             );
         }
