--- a/force-app/main/classes/FFFeatureVariationDefaultsEvaluator.cls
+++ b/force-app/main/classes/FFFeatureVariationDefaultsEvaluator.cls
@@ -1,7 +1,7 @@
 public class FFFeatureVariationDefaultsEvaluator implements FFFeatureVariationEvaluator {
 
-    public String evaluateVariation(FFFeatureConfig featureConfig, FFTarget target) {
-       FFFeatureServe defaultServe = featureConfig.defaultServe;
+    public String evaluateVariation(FFModelsFeatures.FeatureConfig featureConfig, FFTarget target) {
+       FFModelsFeatures.Serve defaultServe = featureConfig.defaultServe;
        String distributedVariation = FFDistributionEvaluator.variationFromDistribution(defaultServe);
        if(distributedVariation != null) return distributedVariation;
        return defaultServe.variation;
