--- a/force-app/main/classes/FFEvaluator.cls
+++ b/force-app/main/classes/FFEvaluator.cls
@@ -1,3 +1,3 @@
 public interface FFEvaluator {
-    FFFeatureVariation evaluate(FFFeatureConfig featureConfig, FFTarget target);
+    FFModelsFeatures.Variation evaluate(FFModelsFeatures.FeatureConfig featureConfig, FFTarget target);
 }
